--- a/Client/index.html
+++ b/Client/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Jaguar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>Rachit Jain</title>
+    <meta name="description" content="Rachit Jain is a skilled full-stack developer and competitive programmer expertise in React, networking, and algorithmic problem-solving." />
+
+    <meta name="keywords" content="Rachit Jain, full-stack developer, problem solving, networking" />
+
+    <meta property="og:title" content="Rachit Jain" />
+    <meta property="og:description" content="Explore Rachit Jain’s projects on full-stack development and software development." />
+    <meta property="og:image" content="http://localhost:5173/Jaguar.png" />
+    <meta property="og:url" content="https://rachitjain-31.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" type="image/png" href="/Jaguar.png" />
+
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Rachit Jain",
+      "url": "https://rachitjain-31.vercel.app/",
+      "jobTitle": "Software Developer",
+      "description": "A passionate full-stack developer and problem solver specializing in networking, and competitive programming.",
+      "image": "http://localhost:5173/Jaguar.png"
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
