--- a/Client/index.html
+++ b/Client/index.html
@@ -7,7 +7,7 @@
     <title>Rachit Jain</title>
     <meta name="description" content="Rachit Jain is a skilled full-stack developer and competitive programmer expertise in React, networking, and algorithmic problem-solving." />
 
-    <meta name="keywords" content="Rachit Jain, full-stack developer, problem solving, networking" />
+    <meta name="keywords" content="Rachit Jain Portfolio, Rachit Jain IIIT Una" />
 
     <meta property="og:title" content="Rachit Jain" />
     <meta property="og:description" content="Explore Rachit Jain’s projects on full-stack development and software development." />
